--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>untitled</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <!--指定了jdk等的的一些配置-->
     <build>
         <plugins>
             <plugin>
@@ -50,6 +50,18 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
         </dependency>
-        
+        <!--执行测试套件的时候，可能会遇到elementtravelsal找不到的问题-->
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.4.01</version>
+        </dependency>
+
+        <dependency>
+            <version>4.5.2</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
