--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,29 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+
+            <!-- 实现方式：集成maven的surefire插件, Surefire插件用于Maven项目的test阶段，以执行单元测试。 集成后我们就可以通过maven命令
+				maven test 来调动脚本执行了。 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.7.1</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <org.uncommons.reportng.escape-output>false</org.uncommons.reportng.escape-output>
+                    </systemPropertyVariables>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <argLine>
+                        -Dfile.encoding=UTF-8
+                    </argLine>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                        <!--相对路径这样写：<suiteXmlFile>src/main/resources/testng.xml</suiteXmlFile> -->
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
         </plugins>
+
 
     </build>
 
@@ -73,6 +95,30 @@
             <version>1.2.44</version>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <!-- <version>3.5.1</version> -->
+            <version>2.53.1</version>
+        </dependency>
+        <!--####################添加reportn依赖用来美化报表，测试用例执行后生成测试报告#################### -->
+        <!-- 自定义报表：去收集testng的测试细节信息，然后自己渲染出来
+            1、html 2、往excel里写入（poi）
+         -->
+        <dependency>
+            <groupId>org.uncommons</groupId>
+            <artifactId>reportng</artifactId>
+            <version>1.1.4</version>
+            <scope>test</scope>
+        </dependency>
+        <!--#######添加Google用于JAVA开发的开放源码依赖项注入框架，解决监听器执行脚本过程中出现的Injector类找不到的问题######### -->
+        <!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>3.0</version>
         </dependency>
 
     </dependencies>
